--- a/recover-ocp4/tasks/create_jumpbox.yml
+++ b/recover-ocp4/tasks/create_jumpbox.yml
@@ -4,22 +4,21 @@
   hosts: localhost
   gather_facts: false
   vars:
-    clus
     cluster_region: "us-east-2"
-    cluster_vpc: "vpc-0ac3a57d83d8dfdaa"
+    cluster_vpc: "vpc-04ed4285a2858ac00"
 
   tasks:
     - name: Put the cluster keypair in AWS for jumphost
       ec2_key:
         name: cluster_keypair
-        key_material: "
+        key_material: "{{ lookup('file', cluster_key_filename) }}"
 
     - name: Create SSH security group
       ec2_group:
         name: jumpbox
         description: jumpbox description
-        region: "
-        vpc_id: "
+        region: "{{ cluster_region }}"
+        vpc_id: "{{ cluster_vpc }}"
         rules:
           - proto: tcp
             ports: 22
@@ -29,7 +28,7 @@
     - name: get vpc_subnet_id
       ec2_vpc_subnet_facts:
         filters:
-          vpc-id: "
+          vpc-id: "{{ sg_jumpbox.vpc_id }}"
           cidr-block: "10.0.0.0/20"
       register: ec2_vpc_subnet_ids
 
@@ -42,24 +41,26 @@
       ec2:
         key_name: "cluster_keypair"
         instance_type: t2.micro
-        group_id: "
+        group_id: "{{ sg_jumpbox.group_id }}"
         image: ami-0520e698dd500b1d1
         wait: true
-        region: "
-        vpc_subnet_id: "
+        region: "{{ cluster_region }}"
+        vpc_subnet_id: "{{ ec2_vpc_subnet_ids.subnets[0].subnet_id }}"
         assign_public_ip: yes
       register: ec2
 
     - name: Add all instance public IPs to host group
-      add_host: hostname=
-      loop: "
+      add_host: hostname={{ item.public_ip }} groups=jumpbox
+      loop: "{{ ec2.instances }}"
 
     - name: Wait for SSH to come up
-      delegate_to: "
+      set_fact:
+        ansible_python_interpreter: /usr/libexec/platform-python
+      delegate_to: "{{ ec2.instances }}"
       wait_for_connection:
         delay: 10
         timeout: 180
-      loop: "
+      loop: "{{ ec2.instances }}"
 
     #  - name: Configure instance(s)
     #    become: True
@@ -68,13 +69,12 @@
     #      - my_awesome_role
     #      - my_awesome_test
     #
-    - name: Terminate instances
-      hosts: localhost
-      tasks:
-        - name: Terminate instances that were previously launched
-          ec2:
-            state: 'absent'
-            instance_ids: '
+    #- name: Terminate instances
+    #  hosts: localhost
+    #  tasks:
+    #    - name: Terminate instances that were previously launched
+    #      ec2:
+    #        state: 'absent'
     #
     #- name: "Delete group by its id"
     #  ec2_group:
