--- a/recover-ocp4/tasks/recover_cluster.yml
+++ b/recover-ocp4/tasks/recover_cluster.yml
@@ -4,6 +4,12 @@
   hosts: localhost
   connection: local
   tasks:
+    - name: version check
+      assert:
+        that: "ansible_version.full is version_compare('2.8', '>=')"
+        msg: >
+          "You must update Ansible to at least 2.8.  run 'sudo yum -y install ansible'"
+
     - name: get prereq python2-boto and python2-boto3 packages
       become: true
       yum:
