--- a/roles/recover/tasks/recover_certs.yml
+++ b/roles/recover/tasks/recover_certs.yml
@@ -35,21 +35,36 @@
 
     - name: set KAO_IMAGE
       shell: |
-        CONTAINER_ID=$( crictl ps | awk '/kube-apiserver-cert-syncer/ { print $1 }' )
-        crictl inspecti --output table  beaf65fce4dc16947c5bd5d1ca7e16313234c393e8ca1c4251ac9b85094972bb | awk '/Digest/ { print $2 }'
+        export IMAGE_ID=$( crictl ps | awk '/kube-apiserver-cert-syncer/ { print $2 }' | head -1 )
+        echo "export IMAGE_ID=${IMAGE_ID}" >> /root/.bashrc
+        crictl inspecti --output table ${IMAGE_ID} | awk '/Digest/ { print $2 }'
       register: KAO_IMAGE
 
+    - name: env var KAO_IMAGE
+      environment:
+        KAO_IMAGE: "{{ KAO_IMAGE.stdout }}"
+
+    - name: add KAO_IMAGE to .bashrc on master
+      lineinfile:
+        path: /root/.bashrc
+        line: "export KAO_IMAGE={{ KAO_IMAGE.stdout }}"
+        
     - name: debug KAO_IMAGE
       debug:
-        var: KAO_IMAGE
+        var: KAO_IMAGE.stdout
 
     - name: podman pull the KAO image
       shell: |
-        podman pull --authfile=/var/lib/kubelet/config.json {{ KAO_IMAGE }}
+        podman pull --authfile=/var/lib/kubelet/config.json {{ KAO_IMAGE.stdout }}
+
+    - name: kill any running recovery-apiservers
+      shell: |
+        podman run -it --network=host -v /etc/kubernetes/:/etc/kubernetes/:Z --entrypoint=/usr/bin/cluster-kube-apiserver-operator {{ KAO_IMAGE.stdout }} recovery-apiserver destroy
+        ps -ef | awk '/kube-apiserver-recovery/ { print $2 }' | xargs kill
 
     - name: run the recovery-apiserver KAO 
       shell: |
-        podman run -it --network=host -v /etc/kubernetes/:/etc/kubernetes/:Z --entrypoint=/usr/bin/cluster-kube-apiserver-operator {{KAO_IMAGE}} recovery-apiserver create
+        podman run -it --network=host -v /etc/kubernetes/:/etc/kubernetes/:Z --entrypoint=/usr/bin/cluster-kube-apiserver-operator {{ KAO_IMAGE.stdout }} recovery-apiserver create
 
     - name: wait for recovery API to come up
       command: oc --config {{ RECOVERY_KUBECONFIG }} get namespace kube-system
@@ -59,7 +74,7 @@
       delay: 10
 
     - name: Run the regenerate-certificates command. It fixes the certificates in the API, overwrites the old certificates on the local drive, and restarts static Pods to pick them up.
-      command: "podman run -it --network=host -v /etc/kubernetes/:/etc/kubernetes/:Z --entrypoint=/usr/bin/cluster-kube-apiserver-operator {{ KAO_IMAGE }} regenerate-certificates"
+      command: "podman run -it --network=host -v /etc/kubernetes/:/etc/kubernetes/:Z --entrypoint=/usr/bin/cluster-kube-apiserver-operator {{ KAO_IMAGE.stdout }} regenerate-certificates"
 
       # force new rollouts for the control plane. It will reinstall itself on the other nodes because the kubelet is connected to API servers using an internal load balancer. 1/3
     - name: force new rollouts for the control plane. It will reinstall itself on the other nodes because the kubelet is connected to API servers using an internal load balancer
@@ -79,7 +94,12 @@
         dest: ../files/ca.crt
         flat: yes
 
-- name: put certs on all masters and recover the kublet
+    - name: destroy recovery-apiserver
+      shell: |
+        podman run -it --network=host -v /etc/kubernetes/:/etc/kubernetes/:Z --entrypoint=/usr/bin/cluster-kube-apiserver-operator {{ KAO_IMAGE.stdout }} recovery-apiserver destroy
+        ps -ef | awk '/kube-apiserver-recovery/ { print $2 }' | xargs kill
+
+- name: put files  on all masters and recover the kubelet
   hosts: control_plane:workers
   gather_facts: false
   become: yes
